packages/scaml.1.2.0/tests/fail/phyeq.ml
(* MUST_FAIL *)
open SCaml
let [@entry] main () () = [], assert (Int 1 == Int 1)

